<!--
  ~ Copyright (C) 2018 Florian Dreier
  ~
  ~ This file is part of MyTargets.
  ~
  ~ MyTargets is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License version 2
  ~ as published by the Free Software Foundation.
  ~
  ~ MyTargets is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="de.dreier.mytargets.features.training.edit.EditTrainingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:transitionName="@string/transition_root_view"
        tools:targetApi="lollipop">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar.WhiteControls">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="72dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="72dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/training_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/trainingDate"
                    android:layout_toStartOf="@+id/trainingDate">

                    <de.dreier.mytargets.views.TextInputEditText
                        android:id="@+id/training"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/trainingDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/training_layout"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="14sp"
                    android:textStyle="normal"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/notEditable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <de.dreier.mytargets.views.selector.StandardRoundSelector
                        android:id="@+id/standardRound"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:id="@+id/change_target_face"
                        style="@style/primaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="start"
                        android:padding="16dp"
                        android:text="@string/change_target_face"
                        android:textStyle="normal"/>

                    <LinearLayout
                        android:id="@+id/practiceLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <de.dreier.mytargets.views.selector.DistanceSelector
                            android:id="@+id/distance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"/>

                        <include layout="@layout/partial_divider_full"/>

                        <de.dreier.mytargets.views.selector.TargetSelector
                            android:id="@+id/target"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"/>

                        <include layout="@layout/partial_divider_full"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/arrowsLabel"
                                style="@style/Label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/arrows"/>

                            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                                android:id="@+id/arrows"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:dsb_indicatorColor="@color/colorPrimary"
                                app:dsb_max="24"
                                app:dsb_min="1"
                                app:dsb_progressColor="@color/colorPrimary"/>

                        </LinearLayout>

                    </LinearLayout>

                    <include layout="@layout/partial_divider_full"/>

                </LinearLayout>

                <de.dreier.mytargets.views.selector.BowSelector
                    android:id="@+id/bow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        style="@style/primaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="start"
                        android:padding="16dp"
                        android:text="@string/add_bow"
                        android:textStyle="normal"/>

                </de.dreier.mytargets.views.selector.BowSelector>

                <include layout="@layout/partial_divider_full"/>

                <de.dreier.mytargets.views.selector.ArrowSelector
                    android:id="@+id/arrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        style="@style/primaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="start"
                        android:padding="16dp"
                        android:text="@string/add_arrow"
                        android:textStyle="normal"/>

                </de.dreier.mytargets.views.selector.ArrowSelector>

                <CheckBox
                    android:id="@+id/numberArrows"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:button="@drawable/arrow_numbers"
                    android:padding="16dp"
                    android:text="@string/arrow_numbers"/>

                <include layout="@layout/partial_divider_full"/>

                <de.dreier.mytargets.views.selector.EnvironmentSelector
                    android:id="@+id/environment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>
