...
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/training_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.dreier.mytargets.views.TextInputEditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>
...
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/light_rain"
                            app:srcCompat="@drawable/ic_light_rain_outline_48dp"/>

                        <ImageButton
                            android:id="@+id/rain"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/rain"
                            app:srcCompat="@drawable/ic_rain_outline_48dp"/>
...

                </LinearLayout>

                <include layout="@layout/partial_divider_full"/>

                <de.dreier.mytargets.views.selector.WindSpeedSelector
                    android:id="@+id/windSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <include layout="@layout/partial_divider_full"/>

                <de.dreier.mytargets.views.selector.WindDirectionSelector
                    android:id="@+id/windDirection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
...
