...
    <!-- Target groups -->
    <string name="target_type_target_archery">Regular</string>
    <string name="target_type_field_archery">Field</string>
    <string name="target_type_3d_archery">3D</string>

    <!-- Target names -->
    <string name="wa_full">WA Full</string>
    <string name="wa_6_ring">WA 6 Ring</string>
    <string name="wa_5_ring">WA 5 Ring</string>
    <string name="wa_3_ring">WA 3 Ring</string>
    <string name="vegas_3_spot">Vegas 3 Spot</string>
    <string name="vertical_3_spot">WA Vertical 3 Spot</string>
    <string name="wa_3_ring_3_spot">WA 3 Ring 3 Spot</string>
    <string name="nfaa_field">NFAA Field</string>
    <string name="nfaa_expert_field">NFAA Expert Field</string>
    <string name="nfaa_hunter">NFAA Hunter</string>
    <string name="nfaa_indoor">NFAA Indoor</string>
    <string name="nfaa_indoor_5_spot">NFAA Indoor 5 Spot</string>
...
