...
                android:layout_marginStart="48dp"
                android:animateLayoutChanges="true"
                android:orientation="horizontal"
                android:weightSum="3">

                <Spinner
                    android:id="@+id/scoring_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    tools:listitem="@android:layout/simple_spinner_item"/>

                <Spinner
                    android:id="@+id/target_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/md_white_1000"
                    android:textSize="16sp"
                    tools:listitem="@android:layout/simple_spinner_item"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            style="@style/card_list"
            app:layoutManager="LinearLayoutManager"/>

    </LinearLayout>

</layout>
...
